@@ -15,6 +15,12 @@ endif
 
 ifeq ($(subdir),elf)
 sysdep_routines += dl-vdso
+ifeq ($(build-shared),yes)
+# This is needed for DSO loading from static binaries.
+sysdep-dl-routines += dl-static
+sysdep_routines += dl-static
+sysdep-rtld-routines += dl-static
+endif
 endif
 
 ifeq ($(subdir),misc)
